--- a/source/index.html
+++ b/source/index.html
@@ -67,14 +67,14 @@
               <article class="programs-list__program program program--slim">
                 <h3 class="program__title">Похудение</h3>
                 <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-                <a class="program__link" href="#">Каталог SLIM</a>
+                <a class="program__link" href="catalog.html#catalog-slim">Каталог SLIM</a>
               </article>
             </li>
             <li class="program-list__item">
               <article class="programs-list__program program program--pro">
                 <h3 class="program__title">Набор массы</h3>
                 <p class="program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-                <a class="program__link" href="#">Каталог PRO</a>
+                <a class="program__link" href="catalog.html#catalog-pro">Каталог PRO</a>
               </article>
             </li>
           </ul>
@@ -91,7 +91,7 @@
               который нужно лишь залить кипятком и готово.</li>
             <li class="advantages-list__item advantages-list__item--practical">Замените один-два приема
               обычной еды на наше функциональное питание.</li>
-            <li class="advantages-list__item advantages-list__item--fast">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+            <li class="advantages-list__item advantages-list__item--fast">Уже через месяц наслаждайтесь изменениями к лучшему<br> вашего питомца!</li>
           </ol>
         </div>
       </section>
@@ -106,11 +106,11 @@
           <div class="work-examples__wrapper-description site-wrapper">
             <p class="work-examples__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
             <dl class="work-examples__list">
-              <div class="work-examples__item">
+              <div class="work-examples__item work-examples__item--thick">
                 <dt class="work-examples__number">снижение веса</dt>
                   <dd class="work-examples__description">5 кг</dd>
               </div>
-              <div class="work-examples__item">
+              <div class="work-examples__item work-examples__item--time">
                 <dt class="work-examples__number">затрачено времени</dt>
                   <dd class="work-examples__description">60 дней</dd>
               </div>
@@ -148,7 +148,7 @@
         <section class="page-footer__cooperation cooperation cooperation--light">
           <div class="cooperation__wrapper site-wrapper">
             <h2 class="visually-hidden">Сотрудничество.</h2>
-            <p class="cooperation__title">Приглашаем к сотрудничеству дилеров!</p>
+            <p class="cooperation__title">Приглашаем<br> к сотрудничеству дилеров!</p>
             <address class="cooperation__address">
               <a class="cooperation__link" href="#" target="_blank">
                 <span class="cooperation__link-wrapper">ул. Большая Конюшенная, д. 19/8</span>
